-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 15
-
Component/s: hotspot
-
b09
Got this secondary failure when a failure was found in VerifyOopsClosure (not VerifyOopClosure).
# Internal Error (open/src/hotspot/share/runtime/mutex.cpp:40), pid=19757, tid=19787
# fatal error: VM thread could block on lock that may be held by a JavaThread during safepoint: SharedDecoder_lock
V [libjvm.so+0x11dfd2d] Mutex::check_block_state(Thread*)+0xad
V [libjvm.so+0x11e1362] Mutex::lock_without_safepoint_check(Thread*)+0x12
V [libjvm.so+0x8e92d3] Decoder::decode(unsigned char*, char*, int, int*, char const*, bool)+0xa3
V [libjvm.so+0x126fefa] os::dll_address_to_function_name(unsigned char*, char*, int, int*, bool)+0xba
V [libjvm.so+0x11fac8b] nmethod::reloc_string_for(unsigned char*, unsigned char*)+0x76b
V [libjvm.so+0x11fae9e] nmethod::has_code_comment(unsigned char*, unsigned char*)+0x3e
V [libjvm.so+0x11fb815] nmethod::decode2(outputStream*) const+0x1a5
V [libjvm.so+0x11fbe56] nmethod::print_nmethod(bool)+0x2a6
V [libjvm.so+0x11fddca] VerifyOopsClosure::do_oop(oop*)+0x9a
V [libjvm.so+0x11f390b] nmethod::oops_do(OopClosure*, bool)+0x2bb
V [libjvm.so+0x11f6304] nmethod::verify()+0x234
V [libjvm.so+0x84c0c4] CodeCache::verify_clean_inline_caches()+0x44
V [libjvm.so+0x12a18f1] CodeCacheUnloadingTask::~CodeCacheUnloadingTask()+0x11
V [libjvm.so+0xa443d5] G1CollectedHeap::complete_cleaning(BoolObjectClosure*, bool)+0x65
V [libjvm.so+0xa6966b] G1ConcurrentMark::weak_refs_work(bool)+0x62b
V [libjvm.so+0xa69e29] G1ConcurrentMark::remark()+0x1a9
V [libjvm.so+0xb09e82] VM_G1Concurrent::doit()+0x292
V [libjvm.so+0x1601da3] VM_Operation::evaluate()+0x143
V [libjvm.so+0x16305d8] VMThread::evaluate_operation(VM_Operation*) [clone .constprop.75]+0x2c8
V [libjvm.so+0x1630d90] VMThread::loop()+0x5e0
V [libjvm.so+0x163121a] VMThread::run()+0xca
V [libjvm.so+0x154a126] Thread::call_run()+0xf6
V [libjvm.so+0x1276fce] thread_native_entry(Thread*)+0x10e
# Internal Error (open/src/hotspot/share/runtime/mutex.cpp:40), pid=19757, tid=19787
# fatal error: VM thread could block on lock that may be held by a JavaThread during safepoint: SharedDecoder_lock
V [libjvm.so+0x11dfd2d] Mutex::check_block_state(Thread*)+0xad
V [libjvm.so+0x11e1362] Mutex::lock_without_safepoint_check(Thread*)+0x12
V [libjvm.so+0x8e92d3] Decoder::decode(unsigned char*, char*, int, int*, char const*, bool)+0xa3
V [libjvm.so+0x126fefa] os::dll_address_to_function_name(unsigned char*, char*, int, int*, bool)+0xba
V [libjvm.so+0x11fac8b] nmethod::reloc_string_for(unsigned char*, unsigned char*)+0x76b
V [libjvm.so+0x11fae9e] nmethod::has_code_comment(unsigned char*, unsigned char*)+0x3e
V [libjvm.so+0x11fb815] nmethod::decode2(outputStream*) const+0x1a5
V [libjvm.so+0x11fbe56] nmethod::print_nmethod(bool)+0x2a6
V [libjvm.so+0x11fddca] VerifyOopsClosure::do_oop(oop*)+0x9a
V [libjvm.so+0x11f390b] nmethod::oops_do(OopClosure*, bool)+0x2bb
V [libjvm.so+0x11f6304] nmethod::verify()+0x234
V [libjvm.so+0x84c0c4] CodeCache::verify_clean_inline_caches()+0x44
V [libjvm.so+0x12a18f1] CodeCacheUnloadingTask::~CodeCacheUnloadingTask()+0x11
V [libjvm.so+0xa443d5] G1CollectedHeap::complete_cleaning(BoolObjectClosure*, bool)+0x65
V [libjvm.so+0xa6966b] G1ConcurrentMark::weak_refs_work(bool)+0x62b
V [libjvm.so+0xa69e29] G1ConcurrentMark::remark()+0x1a9
V [libjvm.so+0xb09e82] VM_G1Concurrent::doit()+0x292
V [libjvm.so+0x1601da3] VM_Operation::evaluate()+0x143
V [libjvm.so+0x16305d8] VMThread::evaluate_operation(VM_Operation*) [clone .constprop.75]+0x2c8
V [libjvm.so+0x1630d90] VMThread::loop()+0x5e0
V [libjvm.so+0x163121a] VMThread::run()+0xca
V [libjvm.so+0x154a126] Thread::call_run()+0xf6
V [libjvm.so+0x1276fce] thread_native_entry(Thread*)+0x10e
- links to
-
Commit
openjdk/panama-foreign/9dcbd819