8237080: fatal error: VM thread could block on lock that may be held by a JavaThread during safepoint: SharedDecoder_lock

Set allow_vm_block to true for this lock.  It's _safepoint_check_never so it's sort of implied (you can't safepoint holding the lock and block out the vm thread).

Reviewed-by: rehn, zgu, pchilanomate, dholmes